--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
 <div class="text-center">
-<b><hl>Deploying Azure WebApps from GitHub</hl></b>
+<b><hl>Deploying Azure WebApps from GitHub continous</hl></b>
 <ul>
 	<li>First commit</li>
 	<li>Second commit</li>
