--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="text-center">
 <b><hl>Deploying Azure WebApps from GitHub continous</hl></b>
 <ul>
-	<li>Third commit</li>
+	<li>Forth commit</li>
 </ul>
 </div>
 <head>
