--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="text-center">
 <b><hl>Deploying Azure WebApps from GitHub continous</hl></b>
 <ul>
-	<li>2019_July_01 12:09 AM commit</li>
+	<li>Committed @ Jul-01-2019 12:09 PM (GMT+08:00)</li>
 </ul>
 </div>
 <head>
