commit at Jul-02

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="text-center">
 <b><hl>Deploying Azure WebApps from GitHub continous</hl></b>
 <ul>
-	<li>Deploying Azure WebApps From GitHub (GMT+08:00)</li>
+	<li>Commit @ Jul-02-2019 10:24AM (GMT+08:00)</li>
 </ul>
 </div>
 <head>
