--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </a>            
         </div>
             <div class="content-body">
-                <div class="success-text">Deploying Azure WebApps from GitHub Success!</div>
+                <div class="success-text">Deploying Azure WebApps from GitHub Success!!!</div>
                 <div class="description line-1"> Azure WebApp Service has been successfully setup</div>
                 <div class="description line-2"> Your WebApp is up and running on Azure</div>
                 <div class="next-steps-container">
