--- a/index.html
+++ b/index.html
@@ -53,23 +53,6 @@
             </div>
         </div>
     </div>
-    <iframe id="chat" style="width: 400px; height: 400px;" src=''></iframe>>
+    <iframe style="height:480px; width:402px" src='https://webchat.botframework.com/embed/EA-APAC-BOT-PD-GRS?s=RoJ9yLw85e0.gSD9muMFFgiuZl5ZGOcW0vBRixlXxuw8o9vTiXQVCn8'></iframe>
     </body>
-    <script>
-
-        var xhr = new XMLHttpRequest();
-        xhr.open('GET', "https://webchat.botframework.com/api/tokens", true);
-        xhr.setRequestHeader('Authorization', 'BotConnector ' + 'YOUR SECRET HERE');
-        xhr.send();
-        xhr.onreadystatechange = processRequest;
-    
-        function processRequest(e) {
-          if (xhr.readyState == 4  && xhr.status == 200) {
-            var response = JSON.parse(xhr.responseText);
-            document.getElementById("chat").src="https://webchat.botframework.com/embed/EA-APAC-BOT-PD-GRS?s=RoJ9yLw85e0.gSD9muMFFgiuZl5ZGOcW0vBRixlXxuw8o9vTiXQVCn8"+response
-          }
-        }
-    
-      </script>
-
 </html>
