update new version of BOT service

--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
             </div>
         </div>
     </div>
-    <iframe style="height:480px; width:402px" src='https://webchat.botframework.com/embed/EA-APAC-BOT-PD-GRS?s=RoJ9yLw85e0.gSD9muMFFgiuZl5ZGOcW0vBRixlXxuw8o9vTiXQVCn8'></iframe>
+    <iframe src='https://webchat.botframework.com/embed/apacqnamakerservice-bot?s=YOUR_SECRET_HERE'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
     </body>
 </html>
